tests/correctness/resources/tests/scopes-conflicting-repr.check
newSource1.scala:27: error: type mismatch;
 found   : (Int, Int)
 required: Int
      n2 = n1
           ^
